the hippie image was not fitting in properly - so we used object-fit:contain to make the image fit into a container   of the specified size. - note to future self: at th beginnign of the project, make sure that all         - images are of the same size, so that you don't have to do this later.         - transparent padding is the same

--- a/styles.css
+++ b/styles.css
@@ -328,10 +328,14 @@ nth-child */
     specify padding*/
 }   
 
-.product .productImg{
+.product .productImg {
     position: absolute;
-    width: 50%;
-
+    width: 1090px;
+    height: 1090px;
+    object-fit: contain;
+    left: 6%;
+    top: 6%;
+    /* Standardized size and alignment for all product images */
 }
 
 .productDetails{
